c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_bitwise_and.c
int main(void) {
    int to_and = 3;
    to_and &= 6;
    return to_and;
}