c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/undeclared_prefix_incr.c
int main(void) {
    a++;
    return 0;
}